--- a/Schirmer2018/Schirmer2018.ipynb
+++ b/Schirmer2018/Schirmer2018.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -842,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -948,16 +948,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.734"
+       "0.725"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -973,13 +973,11 @@
     "\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "meta_comp.rename(columns = {'Group':'rGroup'},inplace = True)\n",
-    "table_comp = df_tca.loc[meta_comp['SampleID']].copy()\n",
-    "n_all = meta_comp.loc[meta_comp['rGroup'].isin([g1,g2])].shape[0]\n",
+    "meta_perm.rename(columns = {'Group':'rGroup'},inplace = True)\n",
+    "table_comp = df_tca.loc[meta_perm['SampleID']].copy()\n",
+    "n_all = meta_perm.loc[meta_perm['rGroup'].isin([\"No remission\",\"Remission\"])].shape[0]\n",
     "n_perm = 1000\n",
-    "p = run_permanova(meta_comp, table_trans.loc[meta_comp['SampleID']].iloc[:,:n_factors].copy(), nperms = n_perm)\n",
+    "p = run_permanova(meta_perm, table_trans.loc[meta_comp['SampleID']].iloc[:,:n_factors].copy(), nperms = n_perm)\n",
     "p"
    ]
   },
@@ -992,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1166,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1316,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1385,7 +1383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1394,7 +1392,7 @@
        "[]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1445,7 +1443,7 @@
     "sns.scatterplot(data = trans_important.query(\"Remission != 'Remission'\"),x=xc,y=yc, s = 15, edgecolor = 'k'\n",
     "                , ax = ax, label = 'FLR')\n",
     "sns.scatterplot(data = trans_important.query(\"Remission == 'Remission'\"),x=xc,y=yc, s = 15, edgecolor = 'k'\n",
-    "                , ax = ax, label = 'REM')#, zorder = -1)\n",
+    "                , ax = ax, label = 'REM')\n",
     "ax.legend(loc='lower left', handlelength = .25,handletextpad = .25, fontsize = 8,borderaxespad=.0,borderpad=.2, fancybox=False,edgecolor='k',labelspacing=.1)\n",
     "ax.set_yticks([], minor = False)\n",
     "ax.set_xticks([], minor = False)"
@@ -1461,7 +1459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
