--- a/Deehan2020/Deehan2020.ipynb
+++ b/Deehan2020/Deehan2020.ipynb
@@ -22,6 +22,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
+    "import scipy\n",
     "sys.path.append('/home/labs/elinav/uria/mprod_package/')\n",
     "\n",
     "import pandas as pd\n",
