--- a/Schirmer2018/Schirmer2018.ipynb
+++ b/Schirmer2018/Schirmer2018.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -842,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -870,6 +870,9 @@
     "pr_meta = meta.loc[table.index.get_level_values('SubjectID'),'Remission'].reset_index().copy()\n",
     "cap = 5e-3\n",
     "\n",
+    "tensor, mode1_mapping, mode3_mapping = table2tensor(table)\n",
+    "mode1_reverse_map = {val:k for k,val in mode1_mapping.items()}\n",
+    "\n",
     "mwt_obj = TCAM(n_components=0.8)\n",
     "\n",
     "tca_red = CompletePipeline(preproc2d = Pipeline([('raf',RAFilter(capval=cap)),\n",
@@ -877,6 +880,7 @@
     "                                             ('ss2', DataframeTransformer(StandardScaler(with_std=False))),\n",
     "                                             ('index_transform', IndexMuncher())])\n",
     "                       , mwt = mwt_obj  )\n",
+    "\n",
     "\n",
     "table_trans = tca_red.fit_transform(table).rename(index = mode1_reverse_map)\n",
     "table_trans.columns = [f'F{i}:{np.round(100*val, 2)}%' for i,val in enumerate(tca_red.mwt.explained_variance_ratio_, start = 1)]\n",
@@ -948,16 +952,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.725"
+       "0.73"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -974,10 +978,10 @@
     "\n",
     "\n",
     "meta_perm.rename(columns = {'Group':'rGroup'},inplace = True)\n",
-    "table_comp = df_tca.loc[meta_perm['SampleID']].copy()\n",
+    "table_comp = table_trans.loc[meta_perm['SampleID']].copy()\n",
     "n_all = meta_perm.loc[meta_perm['rGroup'].isin([\"No remission\",\"Remission\"])].shape[0]\n",
     "n_perm = 1000\n",
-    "p = run_permanova(meta_perm, table_trans.loc[meta_comp['SampleID']].iloc[:,:n_factors].copy(), nperms = n_perm)\n",
+    "p = run_permanova(meta_perm, table_trans.loc[meta_perm['SampleID']].iloc[:,:n_factors].copy(), nperms = n_perm)\n",
     "p"
    ]
   },
@@ -990,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
